--- a/packages/krinon-models/pyproject.toml
+++ b/packages/krinon-models/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "pydantic>=2.12.3",
+    "pyjwt[crypto]>=2.10.1",
 ]
 
 [build-system]
