--- a/packages/krinon-server/pyproject.toml
+++ b/packages/krinon-server/pyproject.toml
@@ -3,11 +3,13 @@ name = "krinon-server"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "AgentWombat", email = "jtzingale@gmail.com" }
-]
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "fastapi[standard-no-fastapi-cloud-cli]>=0.120.0",
+    "krinon-models",
+    "psycopg>=3.2.12",
+    "pyjwt[crypto]>=2.10.1",
+]
 
 [project.scripts]
 krinon-server = "krinon_server:main"
@@ -15,3 +17,6 @@ krinon-server = "krinon_server:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv.sources]
+krinon-models = { workspace = true }
