Basic Krinon Go server working with debug-krinon-module

--- a/krinon-py/packages/krinon-models/pyproject.toml
+++ b/krinon-py/packages/krinon-models/pyproject.toml
@@ -16,3 +16,6 @@ build-backend = "hatchling.build"
 
 [tool.uv.packages]
 krinon_models = { path = "src/krinon_models" }
+
+[tool.hatch.build.targets.sdist]
+include = ["/src/**/py.typed"]
