--- a/krinon-py/packages/debug-krinon-module/pyproject.toml
+++ b/krinon-py/packages/debug-krinon-module/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
-name = "test-module"
+name = "debug-krinon-module"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "fastapi[standard-no-fastapi-cloud-cli]>=0.120.2",
     "krinon-models",
+    "requests>=2.32.5",
 ]
-
-[tool.uv.sources]
-krinon-models = { workspace = true }
